# lua-cross

./: CMakeLists.txt  README.md  build.sh  main.c  msvcbuild.bat
lua51/: CMakeLists.txt
lua52/: CMakeLists.txt
lua53/: CMakeLists.txt
lua54/: CMakeLists.txt
luajit/: msvcbuild.bat
toolchains/: Aarch64.cmake
